# tp-grupal-taller

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.css  bkp_microservicio  clean_rdb_files.sh  dddd.txt  docker-compose.yml  docs.txt  generate_docker_compose.py  makefile  node_ports.txt  redis0.conf  redis1.conf  redis2.conf  redis3.conf  redis4.conf  redis5.conf  redis6.conf  redis7.conf  redis8.conf  redis_node_0_5460.rdb  redis_node_10921_16383.rdb  redis_node_5460_10921.rdb
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: app.rs  client.rs  main.rs  types.rs
conf_files/: redis.conf  redis5.conf  redis6.conf
llm_microservice/: Cargo.toml  Dockerfile
llm_microservice/src/: main.rs  string_helper.rs  threadpool.rs
microservice/: Cargo.toml  Dockerfile  microservice.conf
microservice/src/: main.rs
rdb_files/: redis_node_0_5460_14000.rdb  redis_node_10921_16383_14002.rdb  redis_node_5460_10921_14001.rdb  redis_node_5460_10921_14005.rdb  redis_node_5460_10921_14006.rdb
redis_server/: BaseDockerfile  Cargo.toml  Dockerfile  NodeDockerfile
redis_server/conf_files/: redis1.conf  redis4.conf  redis8.conf
redis_server/rdb_files/: redis_node_0_5460_14000.rdb  redis_node_0_5460_14003.rdb  redis_node_0_5460_14004.rdb  redis_node_10921_16383_14002.rdb  redis_node_10921_16383_14007.rdb  redis_node_10921_16383_14008.rdb  redis_node_5460_10921_14001.rdb  redis_node_5460_10921_14005.rdb  redis_node_5460_10921_14006.rdb
redis_server/src/: encryption.rs  execute_command_params.rs  hashing.rs  local_node.rs  main.rs  peer_node.rs  redis_node_handler.rs  server_context.rs  types.rs  (+1 more)
rusty_docs/: Cargo.toml
src/: app.rs  client.rs  client_info.rs  client_init.rs  document.rs  documento.rs  encryption.rs  hashing.rs  lib.rs  list_commands.rs  list_commands_borrar.rs  llm_microservice.rs  local_node.rs  main.rs  microservice.rs  node.rs  node_info.rs  parse.rs  peer_node.rs  pub_sub_commands.rs  redis_commands.rs  redis_node_handler.rs  redis_server.rs  redis_types.rs  self_node_info.rs  server.rs  server_context.rs  set_commands.rs  shared.rs  string_commands.rs
(+55 files in other folders)
