[package]
name = "llm_microservice"
version = "0.1.0"
edition = "2015"

[dependencies]
curl = "0.4"
serde_json = "1.0"
gtk4 = { version = "0.9.6", package = "gtk4" }
relm4 = { version = "0.9.1" }
gdk4 = { version = "0.9.6" }
rand = "0.8"
chrono = "0.4.41"
aes-gcm = "0.10"   
aes = "0.8"          
base64 = "0.21" 